# MagicaVoxel_File_Writer

./: .clang-format  .gitignore  CMakeLists.txt  README.md  VoxWriter.cpp  VoxWriter.h  main.cpp  vox.hm
.github/workflows/: codeql-analysis.yml
